# industrial_image_anomaly_detection

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  evaluate.py  pyproject.toml  requirements.txt  tox.ini
.github/skills/project-developer/: SKILL.md
docs/: RESULTS.md  USAGE.md
src/: __init__.py  compare_all_approaches.py  compare_models.py  config.py  dataset.py  evaluate.py  evaluate_patchcore.py  evaluate_per_category.py  feature_extractor.py  localization.py  logger.py  metrics.py
src/models/: __init__.py
src/models/autoencoder/: README.md  __init__.py  model.py  model_v2.py  train.py  train_per_category.py  train_v2.py
src/models/diffusion/: README.md  __init__.py  model.py  train.py
src/models/gan/: README.md  __init__.py  model.py  train.py
src/models/patchcore/: README.md  __init__.py  apply_best_configs.py  build_memory_bank.py  enhanced_features.py
tests/: conftest.py  test_config.py  test_dataset.py  test_evaluate.py  test_metrics.py  test_models.py
