[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "anomaly-detection-industrial-images"
version = "0.4.0"
description = "Unsupervised anomaly detection on industrial images using reconstruction-based deep learning models (CAE, GAN, VAE, Diffusion, ViT)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.13"
authors = [
    {name = "racaro"},
]
keywords = ["anomaly-detection", "deep-learning", "computer-vision", "pytorch", "industrial-inspection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "matplotlib==3.10.8",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "tabulate==0.9.0",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "tox>=4.0",
]

[project.urls]
Repository = "https://github.com/racaro/anomaly_detection_industrial_images"

# ──────────────────────────────────────────────
# Tool Configuration
# ──────────────────────────────────────────────

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Entry-point scripts use sys.path.insert before imports
"src/evaluate.py" = ["E402"]
"src/models/autoencoder/train.py" = ["E402"]
"src/models/gan/train.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # tighten incrementally as type coverage grows
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
